// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple ButtonLink matches snapshot. 1`] = `
<a
  className="button button--link"
  href="haha"
>
  I AM A BUTTON
</a>
`;

exports[`Simple ButtonLink with class matches snapshot. 1`] = `
<a
  className="button button--link clazz"
  href="haha"
>
  I AM A BUTTON
</a>
`;
